# esp32_s3_lvgl_vscode_idf_unicontroller

./: .gitignore  README.md  sdkconfig  sdkconfig.defaults
main/: CMakeLists.txt  idf_component.yml  lvgl_port.c  lvgl_port.h  main.c  waveshare_rgb_lcd_port.c  waveshare_rgb_lcd_port.h
main/ui/: ui.c  ui.h
